Fixed modal closing tab not being able to be seen on smaller monitors

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ section {
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1500;
 }
 
 .modal.hidden {
